--- a/c++/workspace/lib/BUILD
+++ b/c++/workspace/lib/BUILD
@@ -1,6 +1,6 @@
 cc_library(
-    name = "hello-time",
-    srcs = ["hello-time.cc"],
-    hdrs = ["hello-time.h"],
+    name = "ptrs_unique_ptr_util",
+    srcs = ["ptrs/unique_ptr_util.cpp"],
+    hdrs = ["ptrs/unique_ptr_util.h"],
     visibility = ["//main:__pkg__"],
 )
