--- a/c++/workspace/lib/BUILD
+++ b/c++/workspace/lib/BUILD
@@ -1,6 +1,6 @@
 cc_library(
     name = "ptrs_unique_ptr_util",
-    srcs = ["ptrs/unique_ptr_util.cpp"],
+    srcs = ["ptrs/unique_ptr_util.cc"],
     hdrs = ["ptrs/unique_ptr_util.h"],
     visibility = ["//main:__pkg__"],
 )
