--- a/c++/workspace/lib/BUILD
+++ b/c++/workspace/lib/BUILD
@@ -4,3 +4,10 @@ cc_library(
     hdrs = ["ptrs/unique_ptr_util.h"],
     visibility = ["//main:__pkg__"],
 )
+
+cc_library(
+    name = "exceptions_exceptions",
+    srcs = ["exceptions/exceptions.cc"],
+    hdrs = ["exceptions/exceptions.h"],
+    visibility = ["//main:__pkg__"],
+)
