--- a/c++/workspace/lib/BUILD
+++ b/c++/workspace/lib/BUILD
@@ -6,6 +6,14 @@ cc_library(
 )
 
 cc_library(
+    name = "ptrs_shared_ptr_util",
+    srcs = ["ptrs/shared_ptr_util.cc"],
+    hdrs = ["ptrs/shared_ptr_util.h"],
+    visibility = ["//main:__pkg__"],
+)
+
+
+cc_library(
     name = "exceptions_exceptions",
     srcs = ["exceptions/exceptions.cc"],
     hdrs = ["exceptions/exceptions.h"],
