--- a/c++/workspace/main/BUILD
+++ b/c++/workspace/main/BUILD
@@ -1,8 +1,10 @@
+
+
+# main_ptrs
 cc_binary(
     name = "main_ptrs",
     srcs = ["main_ptrs.cc"],
     deps = [
-#        ":hello-greet",
         "//lib:ptrs_unique_ptr_util",
         "//lib:ptrs_shared_ptr_util",
     ],
@@ -11,6 +13,7 @@ cc_binary(
     ], 
 )
 
+# main_exceptions
 cc_binary(
     name = "main_exceptions",
     srcs = ["main_exceptions.cc"],
@@ -22,3 +25,16 @@ cc_binary(
         "-std=c++11",
     ], 
 )
+
+# main_threads
+cc_binary(
+    name = "main_threads",
+    srcs = ["main_threads.cc"],
+    deps = [
+        "//lib:threads_thread_util",
+    ],
+    linkopts = [
+        "-std=c++11",
+    ], 
+)
+
