--- a/c++/workspace/main/BUILD
+++ b/c++/workspace/main/BUILD
@@ -50,3 +50,14 @@ cc_binary(
     ], 
 )
 
+# main_enable_if
+cc_binary(
+    name = "main_enable_if",
+    srcs = ["main_enable_if.cc"],
+    deps = [
+    ],
+    linkopts = [
+        "-std=c++11",
+    ], 
+)
+
