--- a/python/grace_t/plugins/nlp/albert_zh/source.conf
+++ b/python/grace_t/plugins/nlp/albert_zh/source.conf
@@ -2,5 +2,8 @@
 export LD_LIBRARY_PATH=/home/work/cudnn/cudnn_v7/cuda/lib64/:$LD_LIBRARY_PATH
 
 export python=/home/work/tools/python-2.7.8-tf1.4-gpu/bin/python
+export python=/home/work/tools/python-3-tf-1.14.0-gpu/bin/python3.6
+export pip="/home/work/tools/python-3-tf-1.14.0-gpu/bin/python3.6 /home/work/tools/python-3-tf-1.14.0-gpu/bin/pip3.6"
+export tensorboard="/home/work/tools/python-3-tf-1.14.0-gpu/bin/python3.6 /home/work/tools/python-3-tf-1.14.0-gpu/bin/tensorboard"
 
 #$python
